trying to fix an animation issue on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -124,6 +124,16 @@ html, body{
   100% {scale: 1000%;
     opacity: 0;}
 }
+@-webkit-keyframes novachange {
+  0% {scale: 0%;
+    opacity: 0.1;}
+  10% {scale: 0%;
+    opacity: 0.3;}
+  70% {scale: 2000%;
+    opacity: 1;}
+  100% {scale: 1000%;
+    opacity: 0;}
+}
 
 .bodycard{
   position: absolute;
